--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <meta name="keywords" content="Web Developer, HTML, CSS, JavaScript, Resume">
     <meta name="author" content="Ashish Khadka">
 
-    <!-- Open Graph (OG) Tags -->
-
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Ashish Khadka - Web Developer" />
+    <meta property="og:description" content="Single Page CV of Ashish Khadka." />
+    <meta property="og:image" content="https://res.ashish-khadka.png" />
+    <meta property="og:type" content="webpage" />
+    <meta property="og:url" content="https://ashish-khadka" />
 
     <!-- favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
